<resources>
    <string name="app_name">Binder</string>
    <string name="labelUserId">User id</string>
    <string name="EditUserId">User ID</string>
    <string name="labelName">Name<font color='#FF0000'>*</font>:</string>
    <string name="editName">Enter Name</string>
    <string name="labelUserPw">Password<font color='#FF0000'>*</font>:</string>
    <string name="EditUserPw">Enter Password</string>
    <string name="labelEmail">Email<font color='#FF0000'>*</font>:</string>
    <string name="editEmail">Enter Email</string>
    <string name="labelDOB">Date of Birth<font color='#FF0000'>*</font>:</string>
    <string name="labelGender">Gender<font color='#FF0000'>*</font></string>
    <string name="labelBio">Bio:</string>
    <string name="editBio">Enter Bio</string>
    <string name="labelGenres">Preferred Genres:</string>
    <string name="welcome">Welcome to</string>
    <string name="binder">Binder</string>
    <string name="emailHint">Enter email</string>
    <string name="passHint">Enter password</string>
    <string name="submit">submit</string>
    <string name="imgBookCover">book_cover</string>
    <string name="dateLiked">Date Liked</string>
    <string name="txtLikedBooksPage">Liked Books</string>
    <string name="backBtn">Back button</string>
    <string name="txtMatchedPage">Matches</string>
    <string name="labelAboutme">About Me:</string>
    <string name="txtProfilePage">My Profile</string>
    <string name="txtEditAccountPage">Edit Profile</string>
    <string name="labelEditPassword">Password</string>
    <string name="txtChats">Chats</string>
</resources>