<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/app_bg2">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="414dp"
        android:layout_height="574dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/labelEmail"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editEmail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/dark_gray"
                android:textColorHighlight="@color/purple_200"
                android:textColorLink="@color/dark_gray"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />


            <TextView
                android:id="@+id/labelUserPw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/labelUserPw"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editUserPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/EditUserPw"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/dark_gray"
                android:textColorHighlight="@color/purple_200"
                android:textColorLink="@color/dark_gray"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />


            <TextView
                android:id="@+id/labelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/labelName"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editName"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/dark_gray"
                android:textColorHighlight="@color/purple_200"
                android:textColorLink="@color/dark_gray"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/labelDOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/labelDOB"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/datePickerButton"
                style="?android:spinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal|center_vertical"
                android:onClick="openDatePicker"
                android:text="JAN 01 2020"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


            <TextView
                android:id="@+id/labelGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/labelGender"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20sp"
                    android:text="Male"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20sp"
                    android:text="Female"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/others"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Others"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/labelBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/labelBio"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editBio"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textColor="@color/dark_gray"
                android:textColorHighlight="@color/purple_200"
                android:textColorLink="@color/dark_gray"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/labelGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/labelGenres"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/fiction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="Fiction"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/fantasy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="Fantasy"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/romance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="Romance"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/scienceFiction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="Science Fiction"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/nonFiction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="Non-Fiction"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/mystery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="Mystery"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/biography"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="Biography"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/poetry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="Poetry"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/adventure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="Adventure"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="281dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edittext"
        android:text="Create account"
        android:theme="@style/Button.White"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>